--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ticketgenerationsystem
 spring.datasource.username=postgres
 spring.datasource.password=Abhinav@1998
 spring.jpa.hibernate.ddl-auto=update
+token.expiry-time=60
